--- a/css/style.css
+++ b/css/style.css
@@ -217,17 +217,75 @@ td { vertical-align: top; }
 /* ==|== primary styles =====================================================
    Author:
    ========================================================================== */
+   
+/* Navigation */
+.toc-menu {
+	position: fixed;
+	z-index: 100;
+	width: 200px;
+	left: 0px;
+	top: 0px;
+	height: 100%;
+}
 
+.toc-menu {
+	text-align: center;
+}
 
+.toc-menu nav {
+	position: absolute;
+	top: 175px;
+	left: 0px;
+	right: 0px;
+	bottom: 50px;
+}
 
+.toc-menu nav a {
+	background: transparent;
+	display: block;
+	padding: 10px 20px;
+	text-align: center;
+	outline: none;
+	border-bottom: 1px dashed rgba(126,126,126,0.2);
+	transition: background 0.3s linear;
+}
 
+.toc-menu nav a:hover {
+	background: #f1f5f8;
+}
 
+.toc-menu nav a:active {
+	box-shadow: 7px 0px 17px #000 inset;
+}
 
+.toc-menu nav li:first-child a {
+	border-top: 1px dashed rgba(126,126,126,0.2);
+}
 
+/* Content */
+.content-scroller {
+	border-left: 1px dashed rgba(126,126,126,0.2);
+	position: absolute;
+	left: 200px;
+	right: 0px;
+	overflow: hidden;
+	height: 100%;
+}
 
+.content-wrapper {
+	height: 100%;
+	overflow-y: scroll;
+	position: absolute;
+}
 
+.content-wrapper article h2,
+.content-wrapper article dl {
+	padding: 10px 20px;
+}
 
-
+.content-wrapper article dt {
+	font-weight: bold;
+}
 
 
 
